syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "ConsultarChavePix";
option objc_class_prefix = "HLW";

import "google/protobuf/timestamp.proto";

package br.com.zup.edu;

service ConsultarChaveService {
  rpc consultarChave (ConsultaRequest) returns (ConsultaResponse) {}
}

message ConsultaRequest {
  message ConsultaInterna {
    int64 pixId = 1;
    string clienteId = 2;
  }

  oneof filtro {
    ConsultaInterna pixId = 1;
    string chave = 2;
  }

}

message ConsultaResponse {
  message Chave {
    message Conta {
      string tipo = 1;
      string instituicao = 2;
      string nomeTitular = 3;
      string cpfTitular = 4;
      string agencia = 5;
      string numeroConta = 6;
    }

    string tipo = 1;
    string chave = 2;
    Conta conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  int64 pixId = 2;
  Chave chave = 3;
}